[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/powerups/PlayableCharacter.gd" type="Script" id=1]
[ext_resource path="res://sprites/luigi.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=86]
animations = [ {
"frames": [ SubResource( 87 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=76]
extents = Vector2( 11, 15.5 )

[node name="PlayableCharacter" type="Node2D"]
script = ExtResource( 1 )

[node name="PowerUp" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="AnimatedSprite" type="AnimatedSprite" parent="PowerUp"]
scale = Vector2( 2, 2 )
frames = SubResource( 86 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PowerUp"]
position = Vector2( 0, 1 )
scale = Vector2( 2, 2 )
shape = SubResource( 76 )

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="PowerUp" to="." method="_on_PlayableCharacter_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
